feat(gate-nats-server,gate-postgres,gate-redis,gate-rabbitmq,gate-proxy,gate-hysteria): create vpn

--- a/deploy/docker-compose.infra.yml
+++ b/deploy/docker-compose.infra.yml
@@ -65,7 +65,7 @@ services:
       appnet:
         ipv4_address: 172.21.0.100
 
-  hysteria-client:
+  hysteria:
     container_name: gate-hysteria
     image: docker.iranserver.com/gatec/hysteria-client:${VERSION}
     cap_add:
