--- a/deploy/docker-compose.infra.yml
+++ b/deploy/docker-compose.infra.yml
@@ -68,6 +68,8 @@ services:
   hysteria:
     container_name: gate-hysteria
     image: docker.iranserver.com/gatec/hysteria-client:${VERSION}
+    volumes:
+      - ./config.yaml:/etc/hysteria/config.yaml:ro
     cap_add:
       - NET_ADMIN
     sysctls:
