--- a/infra/hysteria/Dockerfile
+++ b/infra/hysteria/Dockerfile
@@ -7,6 +7,6 @@ RUN apk add --no-cache curl iproute2 iptables bash \
 RUN curl -L -o /usr/local/bin/hysteria https://github.com/apernet/hysteria/releases/latest/download/hysteria-linux-amd64 \
     && chmod +x /usr/local/bin/hysteria
 
-COPY config.yaml /etc/hysteria/config.yaml
+#COPY config.yaml /etc/hysteria/config.yaml
 
 CMD ["hysteria", "client", "-c", "/etc/hysteria/config.yaml"]
