--- a/deploy/docker-compose.infra.yml
+++ b/deploy/docker-compose.infra.yml
@@ -72,6 +72,8 @@ services:
       - ./configs/hysteria.yaml:/etc/hysteria/config.yaml:ro
     cap_add:
       - NET_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
     sysctls:
       - net.ipv4.ip_forward=1
     networks:
