--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   gather:
-    container_name: gather
+    container_name: gate-gather
     deploy:
       resources:
         limits:
