--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,5 +117,5 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ env.SERVER_USERNAME }}@${{ env.SERVER_HOST }} << EOF
             cd /home/${{ env.SERVER_USERNAME }}/gate
             export VERSION=${{ env.DOCKER_IMAGE_TAG }}
-            docker compose -f \$COMPOSE_FILE up --detach $services_list
+            docker compose -f \$COMPOSE_FILE up $services_list
           EOF
