--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,6 +1,76 @@
 version: '3.9'
 
 services:
+  nats:
+    container_name: gate-nats-server
+    image: docker.iranserver.com/nats:latest
+    ports:
+      - "8321:4222" # Port for client connections
+      - "8322:8222" # Port for monitoring (optional)
+    environment:
+      - NATS_MAX_PAYLOAD=10MB # Optional: Increase max payload size
+    networks:
+      - gate
+    restart: always
+
+  postgres:
+    container_name: gate-postgres
+    image: docker.iranserver.com/postgres:17
+    env_file:
+      - ./configs/postgres.env
+    volumes:
+      - gate_postgres_data:/var/lib/postgresql/data
+    networks:
+      - gate
+    ports:
+      - "8340:5432"
+    restart: always
+
+  redis:
+    container_name: gate-redis
+    image: docker.iranserver.com/bitnami/redis:latest
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    environment:
+      - ALLOW_EMPTY_PASSWORD=no
+    volumes:
+      - gate_redis_data:/var/lib/redis
+    networks:
+      - gate
+    ports:
+      - "8360:6379"
+    restart: always
+
+  rabbitmq:
+    container_name: gate-rabbitmq
+    image: docker.iranserver.com/rabbitmq:3.8-management
+    env_file:
+      - ./configs/rabbit.env
+    volumes:
+      - gate_rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - gate
+    ports:
+      - "8350:15672"
+      - "8351:5672"
+    restart: always
+
+  hysteria:
+    container_name: gate-hysteria
+    image: docker.iranserver.com/gatec/hysteria:${VERSION}
+    volumes:
+      - ./configs/hysteria.yaml:/etc/hysteria/config.yaml:ro
+    ports:
+      - "8390:1080"  # expose SOCKS5 port
+    cap_add:
+      - NET_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
+    sysctls:
+      - net.ipv4.ip_forward=1
+    networks:
+      gate:
+        ipv4_address: 172.28.0.102
+
   chipmunk:
     container_name: gate-chipmunk
     image: docker.iranserver.com/gatec/chipmunk:${VERSION}
@@ -9,8 +79,8 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-rabbitmq
+      - postgres
+      - rabbitmq
     restart: always
 
   core:
@@ -21,8 +91,8 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-rabbitmq
+      - postgres
+      - rabbitmq
     restart: always
 
   eagle:
@@ -33,8 +103,8 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-redis
+      - postgres
+      - redis
     restart: always
 
   gather:
@@ -45,10 +115,10 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-redis
-      - gate-nats-server
-      - gate-hysteria
+      - postgres
+      - redis
+      - nats
+      - hysteria
     restart: always
 
   indicators:
@@ -59,9 +129,9 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-redis
-      - gate-nats-server
+      - postgres
+      - redis
+      - nats
     restart: always
 
   network:
@@ -72,8 +142,8 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-redis
+      - postgres
+      - redis
     restart: always
 
   raven:
@@ -86,8 +156,8 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-redis
+      - postgres
+      - redis
     restart: always
 
   telegram_bot:
@@ -98,9 +168,15 @@ services:
     networks:
       - gate
     depends_on:
-      - gate-postgres
-      - gate-redis
+      - postgres
+      - redis
     restart: always
+
+volumes:
+  gate_postgres_data:
+  gate_redis_data:
+  gate_rabbitmq_data:
+
 
 networks:
   gate:
