--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -67,6 +67,7 @@ services:
       - /dev/net/tun:/dev/net/tun
     sysctls:
       - net.ipv4.ip_forward=1
+    restart: always
     networks:
       gate:
         ipv4_address: 172.28.0.102
