--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -59,8 +59,8 @@ services:
     image: docker.iranserver.com/gatec/hysteria:${VERSION}
     volumes:
       - ./configs/hysteria.yaml:/etc/hysteria/config.yaml:ro
-    ports:
-      - "1080:1080"  # expose SOCKS5 port
+#    ports:
+#      - "1080:1080"  # expose SOCKS5 port
     cap_add:
       - NET_ADMIN
     devices:
