--- a/deploy/docker-compose.infra.yml
+++ b/deploy/docker-compose.infra.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   nats:
     container_name: gate-nats-server
-    image: docker.iranserver.com/nats:latest
+    image: nats:latest
     ports:
       - "8321:4222" # Port for client connections
       - "8322:8222" # Port for monitoring (optional)
@@ -15,7 +15,7 @@ services:
 
   postgres:
     container_name: gate-postgres
-    image: docker.iranserver.com/postgres:17
+    image: postgres:17
     env_file:
       - ./configs/postgres.env
     volumes:
@@ -28,7 +28,7 @@ services:
 
   redis:
     container_name: gate-redis
-    image: docker.iranserver.com/bitnami/redis:latest
+    image: bitnami/redis:latest
     command: redis-server --requirepass ${REDIS_PASSWORD}
     environment:
       - ALLOW_EMPTY_PASSWORD=no
@@ -42,7 +42,7 @@ services:
 
   rabbitmq:
     container_name: gate-rabbitmq
-    image: docker.iranserver.com/rabbitmq:3.8-management
+    image: rabbitmq:3.8-management
     env_file:
       - ./configs/rabbit.env
     volumes:
@@ -56,7 +56,7 @@ services:
 
   hysteria:
     container_name: gate-hysteria
-    image: docker.iranserver.com/gatec/hysteria:${VERSION}
+    image: gatec/hysteria:${VERSION}
     volumes:
       - ./configs/hysteria.yaml:/etc/hysteria/config.yaml:ro
     ports:
